# minish

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
include/: builtins.h  exec.h  lexer.h  parser.h  shell.h  token.h  utils.h
src/: builtins.c  exec.c  lexer.c  main.c  parser.c  shell.c  token.c  utils.c
